classDiagram

namespace PkgSanction {
  class SanctionAbsence
  class ReglesDeSanction
  class Notification
  class SanctionAbsencePrevisionnelle
}

class SanctionAbsencePrevisionnelle{
  + id: int
}

class SanctionAbsence{
  + id: int
  + dateDebut: date
  + dateFin: date
}

class ReglesDeSanction{
  + id: int
  + titre: string
  + description: string
  + absencesMax: int
  + penalite: string
  + seuilDeNotification: int
  + duree: int
  + note: string
}

class Notification {
   + id: int
   + message: string
}

namespace PkgEmploiTemps {
  class DureeSeance
  class Seance
}

namespace PkgJustifications {
  class JustificationAbsence
}

namespace PkgUtilisateurs {
class Apprenant
class Groupe
}

namespace PkgAbsence {
  class Absence
}
 


Absence -- Apprenant
Seance "1" -- "*" Absence
Seance  --> "1" DureeSeance
Apprenant "*" --> "*" Groupe
Apprenant "1" --> "0..*" JustificationAbsence : "possède"

ReglesDeSanction "1" --> "0..*" SanctionAbsencePrevisionnelle : "s'applique à"
ReglesDeSanction "1" --> "0..*" SanctionAbsence : "s'applique à"
SanctionAbsence "1" --> "1..*" Notification : "déclenche"
SanctionAbsence "0..1" --> "1..*" Absence : "basée sur"
SanctionAbsencePrevisionnelle "0..1" --> "0..*" Absence : "analyse"
Apprenant "1" --> "0..*" Notification : "reçoit"
